--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -11,7 +11,9 @@
 #root {
   min-height: 100vh;
 }
-
+a:focus-visible, .btn-as-interactive-link:focus-visible{
+  outline: none;
+}
 .form-helper,
 #form-error {
   display: none;
