--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -8,6 +8,7 @@ $thememaplight : (
   text-color-7: #4361ee,
   text-color-8: #fe6a07,
   text-color-9:#ffeab2,
+  text-color-10:#b66d00,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -33,6 +34,7 @@ $thememapdark : (
   text-color-7: #4361ee,
   text-color-8: #fe6a07,
   text-color-9:#ffeab2,
+  text-color-10:#b66d00,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -57,6 +59,7 @@ $cssvars : (
   text-color-7: --text-color-7,
   text-color-8: --text-color-8,
   text-color-9: --text-color-9,
+  text-color-10: --text-color-10,
   nav-bg-blue: --nav-bg-blue,
   nav-bg-green: --nav-bg-green,
   nav-bg-lightblue: --nav-bg-lightblue,
