--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -12,8 +12,20 @@
   min-height: 100vh;
 }
 a:focus-visible, .btn-as-interactive-link:focus-visible{
+  color: gt.theme-var(text-color-10);
   outline: none;
+};
+
+.btn-as-interactive-link{
+  border: none;
+  outline: none;
+  background: none;
+
+  &:hover{
+    color: gt.theme-var(text-color-10);
+  };
 }
+
 .form-helper,
 #form-error {
   display: none;
