--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -3,6 +3,7 @@
 @use '../../sass/components/auth-nav';
 @use '../../sass/components/auth-input';
 @use '../../sass/components/auth-containers';
+@use '../../sass/components/otp';
 
 @import './_registerTheme.js';
 
@@ -57,54 +58,8 @@ a:focus-visible,
   }
 }
 
-.label-and-otp-fields {
-  width: 90%;
-  margin: auto;
-
-  @include gm.media-breakpoint-up(sm) {
-    width: 70%;
-  }
-}
-
-.otp-fields {
-  display: flex;
-  justify-content: space-between;
-
-  input:not(:last-child) {
-    margin-right: 0.6rem;
-  }
-
-  input {
-    padding: initial;
-    border-left: none;
-    border-right: none;
-    border-top: none;
-    outline: none;
-    border-radius: initial;
-    border-bottom-width: 2px !important;
-    text-align: center;
-  }
-
-  input:focus {
-    box-shadow: none;
-    outline: none;
-  }
-}
-
 .iti--separate-dial-code {
   width: 100%;
-}
-
-.otp-timer {
-  display: none;
-  color: gt.theme-var(text-color-5);
-}
-
-.resend-otp {
-  display: none;
-  color: gt.theme-var(text-color-8);
-  text-decoration: none;
-  cursor: pointer;
 }
 
 .passwordfield-with-toggle-icon {
