forgot password step4

--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -13,8 +13,7 @@
   min-height: 100vh;
 }
 
-a:focus-visible,
-.btn-as-interactive-link:focus-visible {
+a:focus-visible {
   color: gt.theme-var(text-color-10);
   outline: none;
 }
