--- a/src/web/stylesheets/common/pages/register/style.scss
+++ b/src/web/stylesheets/common/pages/register/style.scss
@@ -45,7 +45,7 @@ a:focus-visible {
   }
 }
 
-.create-account-form {
+.register-account-form {
   .next-btn {
     text-align: start;
     display: flex;
