--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -9,6 +9,7 @@ $thememaplight : (
   text-color-8: #fe6a07,
   text-color-9:#ffeab2,
   text-color-10:#b66d00,
+  text-color-11:#ffdd81,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -35,6 +36,7 @@ $thememapdark : (
   text-color-8: #fe6a07,
   text-color-9:#ffeab2,
   text-color-10:#b66d00,
+  text-color-11:#ffdd81,
   nav-bg-blue: #0051ff,
   nav-bg-green: #24aa70,
   nav-bg-lightblue: #00baff,
@@ -60,6 +62,7 @@ $cssvars : (
   text-color-8: --text-color-8,
   text-color-9: --text-color-9,
   text-color-10: --text-color-10,
+  text-color-11: --text-color-11,
   nav-bg-blue: --nav-bg-blue,
   nav-bg-green: --nav-bg-green,
   nav-bg-lightblue: --nav-bg-lightblue,
