--- a/src/web/stylesheets/common/sass/components/_help-modal.scss
+++ b/src/web/stylesheets/common/sass/components/_help-modal.scss
@@ -1,21 +1,19 @@
 @use '../themes/default' as gt;
 @use '../base/mixins' as gm;
 
-.modal {
+.modal.help-modal {
   padding: 0;
 
   .modal-header {
     border: none;
     margin-bottom: 2rem;
-
     background-color: gt.theme-var(text-color-11);
     align-items: center;
 
     .close {
-      border-radius: .3rem;
+      border-radius: 0.3rem;
       padding: 0.3rem 0.8rem;
-      margin-right: .2rem;
-
+      margin-right: 0.2rem;
       display: inline-block;
       background-color: red;
       color: white;
@@ -25,23 +23,6 @@
         color: white;
       }
     }
-  }
-
-  .modal-dialog {
-    width: 100%;
-    max-width: none;
-    height: 100%;
-    margin: 0;
-  }
-
-  .modal-content {
-    height: 100%;
-    border: 0;
-    border-radius: 0;
-  }
-
-  .modal-body {
-    overflow-y: auto;
   }
 
   a {
@@ -54,21 +35,19 @@
   }
 }
 
-
 .help-type-container {
   width: 100%;
   margin: auto;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   border: 2px solid gt.theme-var(text-color-11);
   padding: 1.5rem 1.25rem;
-  margin-bottom:1.5rem;
-
+  margin-bottom: 1.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   @include gm.media-breakpoint-up(sm) {
-    width: 80%;
+    width: 90%;
   }
 
   label {
