--- a/src/web/stylesheets/common/pages/forgot-password/style.scss
+++ b/src/web/stylesheets/common/pages/forgot-password/style.scss
@@ -18,6 +18,10 @@ a:focus-visible {
   outline: none;
 }
 
+.back-btn {
+  cursor: pointer;
+}
+
 .text-link {
   display: block;
   color: gt.theme-var(text-color-8);
