--- a/src/web/stylesheets/common/sass/components/_help-modal.scss
+++ b/src/web/stylesheets/common/sass/components/_help-modal.scss
@@ -55,18 +55,19 @@
 .help-type-container {
   border-radius: 0.8rem;
   border: 2px solid gt.theme-var(text-color-11);
-  padding: 1.5rem 1.25rem;
-  margin-bottom: 1.5rem;
+  padding: 1.5rem;
+  margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   label {
+    margin: 0;
     color: gt.theme-var(text-color-5);
   }
 
   .icon {
-    width: 30px;
-    height: 36px;
+    width: 25px;
+    height: 30px;
   }
 }
