--- a/src/web/stylesheets/common/pages/dashboard/style.scss
+++ b/src/web/stylesheets/common/pages/dashboard/style.scss
@@ -205,6 +205,7 @@
 
     .block-heading {
       font-size: 1.25rem;
+      font-weight: bold;
       line-height: 1.5;
       margin-bottom: 0;
     }
